added link to github repository

--- a/finalprojectindex.html
+++ b/finalprojectindex.html
@@ -92,6 +92,7 @@
                 <br> <br>
                 <button> Check Weather </button>
         </form>
+        <p> <a href="https://github.com/Sniemiec17/final-project">Github Repository</a></p>
         <script src="src/index.js"></script>
 </body>
 
