updating weather section
trying to work on creating F/C section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         </h1>
 
         <h2>
-            Current Temperature
+            <div class="temperature"> Current Temperature </div>
+        </h2>
+        <h2><div class="humidity"> Current Humidity</div>
+        </h2>
+        <h2><div class="wind speed"> Current Wind Speed</div>
         </h2>
         <h3>
             Five Day Forecast
