updating js styling

--- a/index.html
+++ b/index.html
@@ -25,14 +25,10 @@
         </h1>
 
         <h2>
-            <div class="temperature"> Current Temperature </div>
-        </h2>
-        <h2><div class="humidity"> Current Humidity</div>
-        </h2>
-        <h2><div class="wind speed"> Current Wind Speed</div>
+            Current Temperature
         </h2>
         <h3>
-            Five Day Forecast
+            Five Day Forecast 
         </h3>
         <div class="card">
             <div class="card-body">
