--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
             <div class="time-and-date"> Current time and date
         </h1>
 
-        <h2>
-            Current Temperature
-        </h2>
+     <ul>
+         <li>Temperature:<strong id="temperature"></strong><span class="units"><a href="#" id="celsius-link" class="active">°C</a> |
+            <a href="#" id="fahrenheit-link">°F</a></span></li>
+         <li>
+             Humidity: <span id="humidity"></span>%
+         </li>
+         <li>Wind Speed: <span id="wind"></span>MPH</li>
+     </ul>>
         <h3>
             Five Day Forecast 
         </h3>
