--- a/index.html
+++ b/index.html
@@ -31,66 +31,9 @@
              Humidity: <span id="humidity"></span>%
          </li>
          <li>Wind Speed: <span id="wind"></span>MPH</li>
-     </ul>>
-        <h3>
-            Five Day Forecast 
-        </h3>
-        <div class="card">
-            <div class="card-body">
-                <p class="weekday"> Monday </p>
-                <p class="weather-high">
-                    High:
-                </p>
-                <p class="weather-low">
-                    Low:
-                </p>
-            </div>
-        </div> <br> <br>
-        <div class="card">
-            <div class="card-body">
-                <p class="weekday"> Tuesday </p>
-                <p class="weather-high">
-                    High:
-                </p>
-                <p class="weather-low">
-                    Low:
-                </p>
-            </div>
-        </div> <br> <br>
-        <div class="card">
-            <div class="card-body">
-                <p class="weekday"> Wednesday </p>
-                <p class="weather-high">
-                    High:
-                </p>
-                <p class="weather-low">
-                    Low:
-                </p>
-            </div>
-        </div> <br> <br>
-        <div class="card">
-            <div class="card-body">
-                <p class="weekday"> Thursday</p>
-                <p class="weather-high">
-                    High:
-                </p>
-                <p class="weather-low">
-                    Low:
-                </p>
-            </div>
-        </div> <br><br>
-        <div class="card">
-            <div class="card-body">
-                <p class="weekday"> Friday </p>
-                <p class="weather-high">
-                    High:
-                </p>
-                <p class="weather-low">
-                    Low:
-                </p>
-            </div>
-        </div>
-        <br><br>
+         <li>Icon <span id="icon"></span></li>
+         <li>Description <span id="description"></span></li>
+     </ul>
         <form id="search-form">
             <div class="search">
                 <input id="find-city" type="text" placeholder="Please enter a city" /></di>
