fixed formatting errors in JS

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <i class="fas fa-sun"></i>
 
         <h1>
-            <div class="time-and-date"> Current time and date
+            <div class="time-and-date"> Current time and date </div>
         </h1>
 
      <ul>
@@ -40,6 +40,7 @@
                 <br> <br>
                 <button> Check Weather </button>
         </form>
+        </div>
         <p class="githublink"> <a href="https://github.com/Sniemiec17/final-project">Github Repository</a></p>
         <script src="src/index.js"></script>
 </body>
